fix: alignment of notes.

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,10 @@
 
 .main-app-container > .card-element-section {
   display: flex;
-  align-items: center;
+ align-items: center;
+ justify-content: flex-start;
   flex-wrap: wrap;
   margin-inline: 100px;
+  margin-top: 23px;
+  border: 1px solid black;
 }
